--- a/angular-project/src/styles.css
+++ b/angular-project/src/styles.css
@@ -1,1 +1,55 @@
 /* You can add global styles to this file, and also import other style files */
+.button-danger {
+  padding: 8px 16px;
+  background-color: #dc3545;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.button-primary{
+  padding: 8px 16px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+*{
+  margin-bottom: 16px;
+}
+
+.button-danger, .button-primary, .button-clear{
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 8px 16px;
+}
+
+.button-clear{
+  background-color: white;
+}
+
+button:hover
+
+
+
+
+
+
+.dashboard > * {
+  margin-bottom: 16px;
+
+}
+
+@media (max-width: 768px){
+  .dashboard{
+    padding: 8px;
+
+  }
+  .dashboard h1 {
+    padding: 20px;
+  }
+}
