--- a/angular-project/src/app/features/exercises/components/exercise-item/exercise-item.component.html
+++ b/angular-project/src/app/features/exercises/components/exercise-item/exercise-item.component.html
@@ -5,3 +5,4 @@
 <button class="button-danger" (click)="removeExerciseHandler()">remove</button>
 </div>
 <app-exercise-stop-wwatch/>
+<p>{{debugOutput}}</p>
